# failure-analyzer

./: .gitignore  AGENTS.md  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: analyze.yml  build-binaries.yml  checks.yml  debug-runtime.yml  example-go-ci-demo.yml
examples/go-ci-demo/: README.md  go.mod
examples/go-ci-demo/accounts/: accounts.go  accounts_test.go
examples/go-ci-demo/notifications/: notifications.go  notifications_test.go
examples/go-ci-demo/pricing/: pricing.go  pricing_test.go
scripts/: run_local_github_actions_demo.py
src/failure_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  context_builder.py  deepagents_conventions.py  github_actions.py  models.py  prompting.py  report_validation.py  runner.py  tracing.py
src/failure_analyzer/prompts/: __init__.py  ci_failure_analysis_system.md  ci_failure_pr_comment_system.md
src/test_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  github_actions.py  runner.py
tests/: test_analysis.py  test_cli.py  test_deepagents_conventions.py  test_runner.py  test_tracing.py
